--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Introduction to Machine Learning -- Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices....">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Introduction to Machine Learning -- Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices....">
   
 
   
@@ -230,8 +230,10 @@
 <ul>
   <li>Machine Learning.
     <ul>
-      <li>Prepared by me for Spring 16-17: <a href="../MLcourse/index.html" title="Introduction to Machine Learning -- Spring 16-17">Course repository</a>.</li>
+      <li>Prepared by me for Spring 16-17: Introduction to Machine Learning – Spring 16-17: <a target="_blank" href="../MLcourse/index.html"><Course repository="">&lt;/i&gt;&lt;/a&gt;</Course></a></li>
     </ul>
+
+    <p><a href="../MLcourse/index.html" title="Introduction to Machine Learning -- Spring 16-17">Course repository</a>.</p>
   </li>
   <li>Probabilities &amp; Statistics.
     <ul>
