--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Introduction to Machine Learning -- Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices....">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Introduction to Machine Learning -- Spring 16-17: * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16 Spring 14-15...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Introduction to Machine Learning -- Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices....">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Introduction to Machine Learning -- Spring 16-17: * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16 Spring 14-15...">
   
 
   
@@ -230,11 +230,13 @@
 <ul>
   <li>Machine Learning.
     <ul>
-      <li>Prepared by me for Spring 16-17: Introduction to Machine Learning – Spring 16-17: <a target="_blank" href="../MLcourse/index.html"><Course repository="">&lt;/i&gt;&lt;/a&gt;</Course></a></li>
+      <li>Prepared by me for Spring 16-17: Introduction to Machine Learning – Spring 16-17: <a target="_blank" href="../MLcourse/index.html"><Course repository="">&lt;/a&gt;</Course></a></li>
     </ul>
-
-    <p><a href="../MLcourse/index.html" title="Introduction to Machine Learning -- Spring 16-17">Course repository</a>.</p>
   </li>
+</ul>
+
+<!-- 	[Course repository](../MLcourse/index.html "Introduction to Machine Learning -- Spring 16-17"). -->
+<ul>
   <li>Probabilities &amp; Statistics.
     <ul>
       <li>Prepared by me for Spring 16-17: Course,  Exercices.</li>
