--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -26,7 +26,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2017-01-07">
+<meta name="date" content="2017-01-09">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -339,9 +339,9 @@ Click <a href="https://egarpor.shinyapps.io/least-squares/" target="_blank">here
 <h3><span class="header-section-number">1.7.1</span> ANOVA</h3>
 <p>In this section we will see how the variance of <span class="math inline">\(Y\)</span> is decomposed into two parts, each one corresponding to the regression and to the error, respectively. This decomposition is called the <em>ANalysis Of VAriance</em> (ANOVA).</p>
 Before explaining ANOVA, it is important to recall an interesting result: <em>the mean of the fitted values <span class="math inline">\(\hat Y_1,\ldots,\hat Y_n\)</span> is the mean of <span class="math inline">\(Y_1,\ldots, Y_n\)</span></em>. This is easily seen if we plug-in the expression of <span class="math inline">\(\hat\beta_0\)</span>:
-<span class="math display">\[\begin{align*}
+\begin{align*}
 \frac{1}{n}\sum_{i=1}^n \hat Y_i=\frac{1}{n}\sum_{i=1}^n \left(\hat \beta_0+\hat\beta_1X_i\right)=\hat \beta_0+\hat\beta_1\bar X=\left(\bar Y - \hat\beta_1\bar X \right) + \hat\beta_1\bar X=\bar Y.
-\end{align*}\]</span>
+\end{align*}
 <p>The ANOVA decomposition considers the following measures of variation related with the response:</p>
 <ul>
 <li><span class="math inline">\(\text{SST}=\sum_{i=1}^n\left(Y_i-\bar Y\right)^2\)</span>, the <strong>total sum of squares</strong>. This is the <em>total variation</em> of <span class="math inline">\(Y_1,\ldots,Y_n\)</span>, since <span class="math inline">\(\text{SST}=ns_y^2\)</span>, where <span class="math inline">\(s_y^2\)</span> is the sample variance of <span class="math inline">\(Y_1,\ldots,Y_n\)</span>.</li>
@@ -349,9 +349,9 @@ Before explaining ANOVA, it is important to recall an interesting result: <em>th
 <li><span class="math inline">\(\text{SSE}=\sum_{i=1}^n\left(Y_i-\hat Y_i\right)^2\)</span>, the <strong>sum of squared errors</strong><a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a>. Is the variation around the conditional mean. Recall that <span class="math inline">\(\text{SSE}=\sum_{i=1}^n \hat\varepsilon_i^2=(n-2)\hat\sigma^2\)</span>, where <span class="math inline">\(\hat\sigma^2\)</span> is the sample variance of <span class="math inline">\(\hat \varepsilon_1,\ldots,\hat \varepsilon_n\)</span>.</li>
 </ul>
 The ANOVA decomposition is
-<span class="math display">\[\begin{align*}
+\begin{align*}
 \underbrace{\text{SST}}_{\text{Variation of }Y_i&#39;s} = \underbrace{\text{SSR}}_{\text{Variation of }\hat Y_i&#39;s} + \underbrace{\text{SSE}}_{\text{Variation of }\hat \varepsilon_i&#39;s}
-\end{align*}\]</span>
+\end{align*}
 <p>The graphical interpretation of this equation is shown in the following figures.</p>
 <div class="figure" style="text-align: center"><span id="fig:anova"></span>
 <img src="img/anova.png" alt="Visualization of the ANOVA decomposition. SST measures the variation of $Y_1,\ldots,Y_n$ with respect to $\bar Y$. SST measures the variation with respect to the conditional means, $\hat \beta_0+\hat\beta_1X_i$. SSE collects the variation of the residuals." width="70%" />
@@ -368,43 +368,43 @@ Click <a href="https://egarpor.shinyapps.io/anova/" target="_blank">here</a> to 
 <table>
 <thead>
 <tr class="header">
-<th></th>
-<th>Degrees of freedom</th>
-<th>Sum Squares</th>
-<th>Mean Squares</th>
-<th><span class="math inline">\(F\)</span>-value</th>
-<th><span class="math inline">\(p\)</span>-value</th>
+<th align="left"></th>
+<th align="left">Degrees of freedom</th>
+<th align="left">Sum Squares</th>
+<th align="left">Mean Squares</th>
+<th align="left"><span class="math inline">\(F\)</span>-value</th>
+<th align="left"><span class="math inline">\(p\)</span>-value</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>Predictor</td>
-<td><span class="math inline">\(1\)</span></td>
-<td>SSR</td>
-<td><span class="math inline">\(\frac{\text{SSR}}{1}\)</span></td>
-<td><span class="math inline">\(\frac{\text{SSR}/1}{\text{SSE}/(n-2)}\)</span></td>
-<td><span class="math inline">\(p\)</span></td>
+<td align="left">Predictor</td>
+<td align="left"><span class="math inline">\(1\)</span></td>
+<td align="left">SSR</td>
+<td align="left"><span class="math inline">\(\frac{\text{SSR}}{1}\)</span></td>
+<td align="left"><span class="math inline">\(\frac{\text{SSR}/1}{\text{SSE}/(n-2)}\)</span></td>
+<td align="left"><span class="math inline">\(p\)</span></td>
 </tr>
 <tr class="even">
-<td>Residuals</td>
-<td><span class="math inline">\(n - 2\)</span></td>
-<td>SSE</td>
-<td><span class="math inline">\(\frac{\text{SSE}}{n-2}\)</span></td>
-<td></td>
-<td></td>
+<td align="left">Residuals</td>
+<td align="left"><span class="math inline">\(n - 2\)</span></td>
+<td align="left">SSE</td>
+<td align="left"><span class="math inline">\(\frac{\text{SSE}}{n-2}\)</span></td>
+<td align="left"></td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
 <p>The <code>anova</code> function in <code>R</code> takes a model as an input and returns the ANOVA table.</p>
 The “<span class="math inline">\(F\)</span>-value” of the ANOVA table represents the value of the <span class="math inline">\(F\)</span>-statistic <span class="math inline">\(\frac{\text{SSR}/1}{\text{SSE}/(n-2)}\)</span>. This statistic is employed to test
-<span class="math display">\[\begin{align*}
+\begin{align*}
 H_0:\beta_1=0\quad\text{vs.}\quad H_1:\beta_1\neq 0,
-\end{align*}\]</span>
+\end{align*}
 <p>that is, the hypothesis of no linear dependence of <span class="math inline">\(Y\)</span> on <span class="math inline">\(X\)</span>. The result of this test is completely equivalent to the <span class="math inline">\(t\)</span>-test for <span class="math inline">\(\beta_1\)</span> that we saw previously in the Hypothesis testing (this is something <em>specific for simple linear regression</em> – the <span class="math inline">\(F\)</span>-test will not be equivalent to the <span class="math inline">\(t\)</span>-test for <span class="math inline">\(\beta_1\)</span> in the Mulitple Linear Regression).</p>
 It happens that
-<span class="math display">\[\begin{align*}
+\begin{align*}
 F=\frac{\text{SSR}/1}{\text{SSE}/(n-2)}\stackrel{H_0}{\sim} F_{1,n-2},
-\end{align*}\]</span>
+\end{align*}
 <p>where <span class="math inline">\(F_{1,n-2}\)</span> is the <em>Snedecor’s <span class="math inline">\(F\)</span> distribution</em><a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a> with <span class="math inline">\(1\)</span> and <span class="math inline">\(n-2\)</span> degrees of freedom.</p>
 <p>If <span class="math inline">\(H_0\)</span> is true, then <span class="math inline">\(F\)</span> is expected to be <em>small</em> since SSR will be close to zero. The <span class="math inline">\(p\)</span>-value of this test is the same as the <span class="math inline">\(p\)</span>-value of the <span class="math inline">\(t\)</span>-test for <span class="math inline">\(H_0:\beta_1=0\)</span>.</p>
 </div>
