--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -26,7 +26,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2017-01-15">
+<meta name="date" content="2017-01-16">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -158,7 +158,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="pw-2.html"><a href="pw-2.html#the-report-to-be-submitted"><i class="fa fa-check"></i>The report to be submitted</a></li>
 </ul></li>
 <li class="chapter" data-level="2.5" data-path="pw-2.html"><a href="pw-2.html#multiple-linear-regression-1"><i class="fa fa-check"></i><b>2.5</b> Multiple Linear Regression</a><ul>
-<li class="chapter" data-level="" data-path="pw-2.html"><a href="pw-2.html#exercise-1-boston-data-set"><i class="fa fa-check"></i>Exercise 1: Boston data set</a></li>
+<li class="chapter" data-level="" data-path="pw-2.html"><a href="pw-2.html#the-exercises"><i class="fa fa-check"></i>The exercises</a></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -195,7 +195,23 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="r-markdown" class="section level3 unnumbered">
 <h3>R Markdown</h3>
 <p>R Markdown is a variant of Markdown that has embedded <code>R</code> code chunks, to be used with the <code>knitr</code> package to make it <strong>easy to create reproducible web-based reports</strong>.</p>
-<p>First, in <code>Rstudio</code> create a new <code>R Notebook</code> file. A default template will be opened. Click on <code>Preview</code> and save your file. Then your html report will be opened in the viewer pane. Every time you click on <code>Preview</code> the html file in the viewer pane will be updated. If your file is named <code>report.Rmd</code>, your report is named <code>report.nb.html</code>.</p>
+<p>First, in <code>Rstudio</code> create a new <code>R Notebook</code> file. A default template will be opened. There is some <code>R</code> code in <code>R chunks</code>, run them then click on <code>Preview</code> and save your file. Then your html report will be opened in the viewer pane. Every time you click on <code>Preview</code> the html file in the viewer pane will be updated. If your file is named <code>report.Rmd</code>, your report is named <code>report.nb.html</code>.</p>
+<div class="rmdcaution">
+<ul>
+<li>
+If there is no <code>R Notebook</code> button, this means you don’t have the last version of <code>Rstudio</code>.
+</li>
+<li>
+In this case, click on <code>R Markdown</code> buttonn make sure that you select HTML as output. This produces a <code>html_document</code> and you need to click on <code>knit</code> button to compile it.
+</li>
+<li>
+If you have problems creating a <code>R Markdown</code> file (problem in installing packages, etc..) close your <code>Rstudio</code> and reopen it with administrative tools and retry.
+</li>
+<li>
+If it doesn’t work and in order to not loose more time, write your script in an <code>.R</code> file with your comments and submit it.
+</li>
+</ul>
+</div>
 <div class="rmdcaution">
 <ul>
 <li>
@@ -233,7 +249,7 @@ output: html_notebook
 title: &quot;Week 2&quot;
 subtitle: &quot;Multiple Linear Regression&quot;
 author: LastName FirstName
-date: &quot;2017-01-15 19:42:35&quot;
+date: &quot;2017-01-16 09:51:10&quot;
 output:
   html_notebook:
     toc: true
@@ -258,8 +274,8 @@ output:
 Submit a report following the instructions above. In the first exercise you must continue the analysis of the Boston data set.
 </p>
 </div>
-<div id="exercise-1-boston-data-set" class="section level3 unnumbered">
-<h3>Exercise 1: Boston data set</h3>
+<div id="the-exercises" class="section level3 unnumbered">
+<h3>The exercises</h3>
 <p>Continue what we started last week with the Boston dataset which is part of the <code>MASS</code> package. Recall that this dataset records the median value of houses for 506 neighborhoods around Boston.</p>
 <ol style="list-style-type: decimal">
 <li><p>Load the Boston dataset from <code>MASS</code> package.</p></li>
