--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -195,20 +195,30 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="r-markdown" class="section level3 unnumbered">
 <h3>R Markdown</h3>
 <p>R Markdown is a variant of Markdown that has embedded <code>R</code> code chunks, to be used with the <code>knitr</code> package to make it <strong>easy to create reproducible web-based reports</strong>.</p>
-<p>First, in <code>Rstudio</code> create a new <code>R Notebook</code> file. A default template will be opened. There is some <code>R</code> code in <code>R chunks</code>, run them then click on <code>Preview</code> and save your file. Then your html report will be opened in the viewer pane. Every time you click on <code>Preview</code> the html file in the viewer pane will be updated. If your file is named <code>report.Rmd</code>, your report is named <code>report.nb.html</code>.</p>
+<!-- First, in `Rstudio` create a new `R Notebook` file. A default template will be opened. There is some `R` code in `R chunks`, run them then click on `Preview` and save your file. Then your html report will be opened in the viewer pane. -->
+<!-- Every time you click on `Preview` the html file in the viewer pane will be updated. If your file is named `report.Rmd`, your report is named `report.nb.html`. -->
+<!-- ```{block, type = 'rmdcaution'} -->
+<!-- * If there is no `R Notebook` button, this means you don't have the last version of `Rstudio`. -->
+<!-- * In this case, click on `R Markdown` buttonn make sure that you select HTML as output. This produces a `html_document` and you need to click on `knit` button to compile it. -->
+<!-- * If you have problems creating a `R Markdown` file (problem in installing packages, etc..) close your `Rstudio` and reopen it with administrative tools and retry. -->
+<!-- * If it doesn't work and in order to not loose more time, write your script in an `.R` file with your comments and submit it. -->
+<!-- ``` -->
+<!-- ```{block, type = 'rmdcaution'} -->
+<!-- * Be ready to submit your report (your `.nb.html` file) at the end of each class. -->
+<!-- * You report must be named: -->
+<!-- `YouLastName_YourFirstName_WeekNumber.nb.html` -->
+<!-- ``` -->
+<p>First, in <code>Rstudio</code> create a new <code>R Markdown</code> file. A default template will be opened. There is some <code>R</code> code in <code>R chunks</code>. Clink on <code>knit</code>, save your file and see the produced output. The output is a html report containing the results of the <code>R</code> codes. If your file is named <code>report.Rmd</code>, your report is named <code>report.html</code>.</p>
 <div class="rmdcaution">
 <ul>
 <li>
-If there is no <code>R Notebook</code> button, this means you don’t have the last version of <code>Rstudio</code>.
-</li>
-<li>
-In this case, click on <code>R Markdown</code> buttonn make sure that you select HTML as output. This produces a <code>html_document</code> and you need to click on <code>knit</code> button to compile it.
+Make sure to have the latest version of <code>Rstudio</code>.
 </li>
 <li>
 If you have problems creating a <code>R Markdown</code> file (problem in installing packages, etc..) close your <code>Rstudio</code> and reopen it with administrative tools and retry.
 </li>
 <li>
-If it doesn’t work and in order to not loose more time, write your script in an <code>.R</code> file with your comments and submit it.
+If it doesn’t work and in order to not lose more time, write your script in an <code>.R</code> file with your comments and submit it.
 </li>
 </ul>
 </div>
@@ -216,7 +226,7 @@ If it doesn’t work and in order to not loose more time, write your script in a
 <ul>
 <li>
 <p>
-Be ready to submit your report (your <code>.nb.html</code> file) at the end of each class.
+Be ready to submit your report (your <code>.html</code> file) at the end of each class.
 </p>
 </li>
 <li>
@@ -226,7 +236,7 @@ You report must be named:
 </li>
 </ul>
 <p>
-<code>YouLastName_YourFirstName_WeekNumber.nb.html</code>
+<code>YouLastName_YourFirstName_WeekNumber.html</code>
 </p>
 </div>
 <p>You can find all the informations about R Markdown on this site: <a href="http://rmarkdown.rstudio.com/lesson-1.html">rmarkdown.rstudio.com</a>.</p>
@@ -238,10 +248,10 @@ You report must be named:
 </div>
 <div id="the-report-to-be-submitted" class="section level3 unnumbered">
 <h3>The report to be submitted</h3>
-<p>In <code>Rstudio</code>, start by creating a R Notebook. When you create it a default template will be opened with the following first lines:</p>
+<p>In <code>Rstudio</code>, start by creating a R Markdown file. When you create it a default template will be opened with the following first lines:</p>
 <pre><code>---
-title: &quot;R Notebook&quot;
-output: html_notebook
+title: &quot;Untitled&quot;
+output: html_document
 ---</code></pre>
 <p>These lines are the YAML header in which you choose the settings of your report (title, author, date, appearance, etc..)</p>
 <p>For your submitted report, use the following YAML header:</p>
@@ -249,9 +259,9 @@ output: html_notebook
 title: &quot;Week 2&quot;
 subtitle: &quot;Multiple Linear Regression&quot;
 author: LastName FirstName
-date: &quot;2017-01-16 09:51:10&quot;
+date: &quot;2017-01-16 10:43:08&quot;
 output:
-  html_notebook:
+  html_document:
     toc: true
     toc_depth: 2
     theme: flatly
@@ -261,9 +271,9 @@ output:
 <li>Put every exercise in a section, name the section <code>Exercise i</code> (i is the exercise’s number).</li>
 <li>Paste the exercise content.</li>
 <li>Write the code of the exercise in R chunks.</li>
-<li>Run the chunk, you get the result down the chunk, don’t close it.</li>
-<li>Click on Preview.</li>
+<li>Run the chunk to make sure it works.</li>
 <li>If there is a need, explain the results.</li>
+<li>Click on <code>knit</code></li>
 </ul>
 </div>
 </div>
