--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -259,7 +259,7 @@ output: html_document
 title: &quot;Week 2&quot;
 subtitle: &quot;Multiple Linear Regression&quot;
 author: LastName FirstName
-date: &quot;2017-01-16 10:43:08&quot;
+date: &quot;2017-01-16 11:33:33&quot;
 output:
   html_document:
     toc: true
@@ -289,7 +289,7 @@ Submit a report following the instructions above. In the first exercise you must
 <p>Continue what we started last week with the Boston dataset which is part of the <code>MASS</code> package. Recall that this dataset records the median value of houses for 506 neighborhoods around Boston.</p>
 <ol style="list-style-type: decimal">
 <li><p>Load the Boston dataset from <code>MASS</code> package.</p></li>
-<li><p>Split the dataset into traning set and testing set.</p></li>
+<li><p>Split the dataset into traning set and testing set. (keep all the variables of the Boston data set)</p></li>
 <li><p>Check if there is a linear relationship between the variables <code>mdev</code> and <code>age</code>. (use <code>cor()</code> function).</p></li>
 <li><p>Plot <code>medv</code> in function of <code>age</code>.</p></li>
 <li><p>Train a regression model using both <code>lstat</code> and <code>age</code> as predictors of median house value. (Remember that we transformed <code>lstat</code>, use the same transformation here). What is the obtained model?</p></li>
