--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -259,7 +259,7 @@ output: html_document
 title: &quot;Week 2&quot;
 subtitle: &quot;Multiple Linear Regression&quot;
 author: LastName FirstName
-date: &quot;2017-01-16 11:33:33&quot;
+date: &quot;2017-01-16 12:58:49&quot;
 output:
   html_document:
     toc: true
@@ -303,6 +303,7 @@ Submit a report following the instructions above. In the first exercise you must
 <li><p>Visualize the correlations using the <code>corrplot</code> package. To do so, install the <code>corrplot</code> package, load it, then use the function <code>corrplot.mixed()</code>. See this <a href="https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html">link</a> for examples and to understand how to use it.</p></li>
 <li><p>What is the correlation between <code>tax</code> and <code>rad</code>?</p></li>
 <li><p>Run the model again without <code>rad</code>. What happens to the <span class="math inline">\(R^2\)</span> ? and for the F-statistic?</p></li>
+<li><p>Calculate the mean squared error (MSE) for the last model.</p></li>
 </ol>
 <div class="rmdinsight">
 <p>
