--- a/MLcourse/pw-2.html
+++ b/MLcourse/pw-2.html
@@ -259,7 +259,7 @@ output: html_document
 title: &quot;Week 2&quot;
 subtitle: &quot;Multiple Linear Regression&quot;
 author: LastName FirstName
-date: &quot;2017-01-16 12:58:49&quot;
+date: &quot;2017-01-16 14:41:12&quot;
 output:
   html_document:
     toc: true
@@ -290,7 +290,7 @@ Submit a report following the instructions above. In the first exercise you must
 <ol style="list-style-type: decimal">
 <li><p>Load the Boston dataset from <code>MASS</code> package.</p></li>
 <li><p>Split the dataset into traning set and testing set. (keep all the variables of the Boston data set)</p></li>
-<li><p>Check if there is a linear relationship between the variables <code>mdev</code> and <code>age</code>. (use <code>cor()</code> function).</p></li>
+<li><p>Check if there is a linear relationship between the variables <code>medv</code> and <code>age</code>. (use <code>cor()</code> function).</p></li>
 <li><p>Plot <code>medv</code> in function of <code>age</code>.</p></li>
 <li><p>Train a regression model using both <code>lstat</code> and <code>age</code> as predictors of median house value. (Remember that we transformed <code>lstat</code>, use the same transformation here). What is the obtained model?</p></li>
 <li><p>Print the summary of the obtained regression model.</p></li>
